﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version 3.0.2 (v3.0.2 RTM) 2015-08-21

	Bug fixes:
		[MVC] Issue #98 caused SimpleInjectorDependencyResolver to break. (fixes #99)
		[WebApi] Issue #98 caused SimpleInjectorWebApiDependencyResolver to break. (fixes #99)


Version 3.0.1 (v3.0.1 RTM) 2015-08-20

	Breaking Changes:
		Unregistered collections are not resolved by default as empty collections (fixes #98).

	Bug fixes:
		Small improvement to exception message concering overlapping registrations.


Version 3.0.0 (v3.0 RTM) 2015-08-18

	Improvements/Changes:
		-[Core] Container now implements IDisposable (fixes #5).
		-[Core] Added RegisterDecorator<TService, TDecorator>() methods (fixes #7).
		-[Core] Added RegisterDecorator() as instance methods on the Container (fixes #7).
		-[Core] Register(Type, Type) overloads now accept open-generic types as well (fixes #7).
	    -[Core] Added Container.GetTypesToRegister method for batch registration. (fixes #7)
		-[Core] Added Container.RegisterSingleton methods as replacement for RegisterSingle overloads that
		 take in an instance (fixes #44).
		-[Core] Added Container.RegisterCollection methods as replacement for RegisterAll (fixes #42).
		-[Core] InstanceProducer<TService> added that inherits from InstanceProducer and adds a
		 "TService GetInstance()" method. The generic Lifestyle.CreateProducer methods return an
		 InstanceProducer<TService> (fixes #39).
		-[Core] DiagnosticResult.Severity property added to allow differentiating between warnings and
		 information messages (fixes #9).
		-[Core] RegisterCollection(Type, IEnumerable<Registration>) now accepts open generic types as well
		 (fixes #22).
		-[Core] Added Container.Register(Type, IEnumerable<Assembly>) and 
		 Container.RegisterCollection(Type, IEnumerable<Assembly>) overloads for batch registration. (fixes #7)
		-[Core] Added RegisterCollection overloads that take in an assembly to allow Simple Injector to search 