@@ -132,7 +132,9 @@ namespace SimpleInjector
         {
             Requires.IsNotNull(container, nameof(container));
 
-            return this.GetCurrentScopeCore(container) ?? container.VerificationScope;
+            // If we are running verification in the current thread, we prefer returning a verification scope
+            // over a real active scope (issue #95).
+            return container.GetVerificationScopeForCurrentThread() ?? this.GetCurrentScopeCore(container);
         }
 
         /// <summary>
